[gd_scene load_steps=9 format=3 uid="uid://b486261c4njkr"]

[ext_resource type="Texture2D" uid="uid://dk730grlg3xcs" path="res://icon.svg" id="1_3dogw"]
[ext_resource type="Script" uid="uid://ee8bcwm23g8s" path="res://Scripts/coaster.gd" id="1_50ct6"]
[ext_resource type="Script" uid="uid://bkb871i4ro4q2" path="res://Scripts/follow_camera_2d.gd" id="1_ak5v8"]
[ext_resource type="Script" uid="uid://dda8wjdq1gqsl" path="res://Scripts/build_ui.gd" id="4_hb2xm"]
[ext_resource type="Script" uid="uid://cdnxw8ss650ti" path="res://Scripts/train.gd" id="5_ak5v8"]

[sub_resource type="Curve2D" id="Curve2D_ak5v8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 700, -40, 0, 80, 0, 160, 700, -80, 0, 40, 0, 720, 150, 0, 0, 0, 0, 800, 150)
}
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb2xm"]
size = Vector2(700, 719.142)

[sub_resource type="CircleShape2D" id="CircleShape2D_ak5v8"]
radius = 40.0

[node name="TestScene" type="Node2D"]

[node name="FollowCamera2D" type="Camera2D" parent="."]
position = Vector2(0, 360)
script = ExtResource("1_ak5v8")

[node name="Coaster" type="Path2D" parent="."]
curve = SubResource("Curve2D_ak5v8")
script = ExtResource("1_50ct6")

[node name="Chain" type="Area2D" parent="Coaster"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coaster/Chain"]
position = Vector2(350, 359.571)
shape = SubResource("RectangleShape2D_hb2xm")

[node name="Train" type="PathFollow2D" parent="Coaster"]
position = Vector2(0, 700)
loop = false
script = ExtResource("5_ak5v8")

[node name="Sprite2D" type="Sprite2D" parent="Coaster/Train"]
position = Vector2(0, -20)
scale = Vector2(0.625, 0.3125)
texture = ExtResource("1_3dogw")

[node name="Area2D" type="Area2D" parent="Coaster/Train"]
position = Vector2(0, -20)
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coaster/Train/Area2D"]
shape = SubResource("CircleShape2D_ak5v8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BuildUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_hb2xm")

[node name="StraightButton" type="Button" parent="CanvasLayer/BuildUI"]
layout_mode = 0
offset_left = 480.0
offset_top = 670.0
offset_right = 565.0
offset_bottom = 701.0
text = "STRAIGHT"

[node name="DownButton" type="Button" parent="CanvasLayer/BuildUI"]
layout_mode = 0
offset_left = 580.0
offset_top = 670.0
offset_right = 665.0
offset_bottom = 701.0
text = "DOWN"

[node name="UpButton" type="Button" parent="CanvasLayer/BuildUI"]
layout_mode = 0
offset_left = 680.0
offset_top = 670.0
offset_right = 765.0
offset_bottom = 701.0
text = "UP"

[node name="BoostButton" type="Button" parent="CanvasLayer/BuildUI"]
layout_mode = 0
offset_left = 790.0
offset_top = 670.0
offset_right = 875.0
offset_bottom = 701.0
disabled = true
text = "BOOST
"

[connection signal="area_entered" from="Coaster/Train/Area2D" to="Coaster/Train" method="_on_area_2d_area_entered"]
[connection signal="pressed" from="CanvasLayer/BuildUI/StraightButton" to="CanvasLayer/BuildUI" method="_on_straight_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BuildUI/DownButton" to="CanvasLayer/BuildUI" method="_on_down_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BuildUI/UpButton" to="CanvasLayer/BuildUI" method="_on_up_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BuildUI/BoostButton" to="CanvasLayer/BuildUI" method="_on_boost_button_pressed"]
